# AutoDiff

./: .gitignore  README.md
src/: CMakeLists.txt
src/Expressions/: Activation.cpp  Activation.hpp  Addition.cpp  Addition.hpp  CMakeLists.txt  CategoricalCrossentropy.cpp  CategoricalCrossentropy.hpp  Conv2D.cpp  Conv2D.hpp  Expression.cpp  Expression.hpp  Input.cpp  Input.hpp  Matmul.cpp  Matmul.hpp  Pooling2D.cpp  Pooling2D.hpp  ReduceMean.cpp  ReduceMean.hpp  ReduceSum.cpp  ReduceSum.hpp  Reshape.cpp  Reshape.hpp  Softmax.cpp  Softmax.hpp  Variable.cpp  Variable.hpp
src/Expressions/CudaManagers/: CublasManager.cpp  CudnnManager.cpp  CudnnManager.hpp
src/Graph/: CMakeLists.txt  Graph.cpp  Graph.hpp
src/Graph/Optimizers/: Adam.cpp  Adam.hpp  Optimizer.hpp  SGD.cpp  SGD.hpp
src/Kernels/: CMakeLists.txt  kernel_api.h  operations.cu
src/Tensor/: CMakeLists.txt  Tensor.cpp  Tensor.hpp  TensorTypes.hpp
src/Tensor/CudaManagers/: CublasManager.cpp  CublasManager.hpp  CudnnManager.cpp  CudnnManager.hpp
src/Utils/: CMakeLists.txt  Initializers.cpp  Initializers.hpp  error_logs.cpp  error_logs.hpp
test/MnistModel/: ConvMnist.cpp  DenseMnist.cpp  IncludeExpressions.hpp  MnistDataset.cpp  MnistDataset.hpp  ResMnist.cpp  compile.sh  test1.cpp
